tinyc/test/good/syn-arrows.asm
main:
    put  42 -> l1
    put  42 → l2
    put  42, l3
    ret
