tinyc/test/bad/syn-arrow-misplaced.asm
main:
    add  42 -> l1, l2
    ret
